# greentic-pack

./: .gitignore  Cargo.toml  README.md  SECURITY_FIX_REPORT.md  all-alerts.json  codex-prompt.txt  dependabot-alerts.json
.codex/: repo_overview.md
.codex/done/: PR-01.md  PR-02.md
.github/workflows/: auto-tag.yml  ci.yml  codex-security-fix-test.yml  dev-publish.yml  publish.yml
ci/: local_check.sh
crates/greentic-pack/: Cargo.toml
crates/greentic-pack/examples/: build_demo.rs
crates/greentic-pack/src/: builder.rs  lib.rs  pack_lock.rs  path_safety.rs  plan.rs
crates/greentic-pack/tests/: component_manifest_index.rs  pack_lock.rs  packc_compat.rs  plan_cli.rs
crates/packc/: Cargo.toml
crates/packc/src/: build.rs  component_host_stubs.rs  config.rs  flow_resolve.rs  flows.rs  lib.rs  manifest.rs  new.rs  pack_lock_doctor.rs  path_safety.rs  runtime.rs  telemetry.rs  validator.rs
crates/packc/tests/: add_extension_smoke.rs  build_and_lint.rs  build_component_manifests.rs  build_pipeline.rs  cli.rs  cli_options.rs  cli_smoke.rs  component_exec_operation.rs  component_exec_operation_fixture.rs  (+21 more)
crates/packc/tests/router_echo/: Cargo.toml  README.md
crates/packc/tests/router_echo/src/: bindings.rs  lib.rs
crates/packc/tests/router_echo/wit/: mcp-router.wit
docs/: cli.md  events-provider-packs.md  pack-format.md  provider_extension.md  publishing.md  usage.md
examples/billing-demo/: pack.lock.json
examples/qa-demo/: pack.lock.json
examples/reco-demo/: pack.lock.json
examples/search-demo/: pack.lock.json
examples/weather-demo/: pack.lock.json
(+29 files in other folders)
