[package]
name = "router-echo"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen = { version = "0.50", default-features = false, features = ["macros", "realloc"] }
serde_json = "1"

[lib]
crate-type = ["cdylib"]

[package.metadata.component.target]
path = "wit"
world = "mcp-router"

[profile.release]
opt-level = "z"

[workspace]
